# shpool-table

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
src/: events.rs  main.rs  session.rs  tty.rs  tui.rs
src/tui/: command.rs  event.rs  keymap.rs  mod.rs  model.rs  parser.rs  template.rs  update.rs  view.rs
src/tui/snapshots/: shpool_table__tui__view__tests__confirm_force_footer.snap  shpool_table__tui__view__tests__confirm_kill_footer.snap  shpool_table__tui__view__tests__create_input_midtyping.snap  shpool_table__tui__view__tests__empty_list_shows_hint.snap  shpool_table__tui__view__tests__error_replaces_footer.snap  shpool_table__tui__view__tests__list_with_selection.snap  shpool_table__tui__view__tests__stale_selection_suppresses_highlight.snap  shpool_table__tui__view__tests__vars_view_browsing.snap  shpool_table__tui__view__tests__vars_view_editing_shows_prospective_target.snap  shpool_table__tui__view__tests__vars_view_empty.snap  shpool_table__tui__view__tests__vars_view_unset_row.snap
