[package]
name = "shpool-table"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A TUI session manager that wraps shpool by shelling out to the shpool CLI."
license = "Apache-2.0"

[dependencies]
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
